--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,32 @@
 {% load static %}
 {% load django_bootstrap5 %}
-{% block title %}{% endblock title %}
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- body -->
-{% block body %}{% endblock body %}
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block css %}
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+      {% bootstrap_css %}
+      <link rel="stylesheet" href="{% static 'styles/init.css' %}">
+      <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+    {% endblock css %}
+    <title>TBT</title>
+    {% block script %}
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    {% endblock script %}
+  </head>
+
+  <body>
+    <header></header>
+    {% block title %}{% endblock title %}
+
+    <!-- body -->
+    {% block body %}{% endblock body %}
+    <footer></footer>
+    {% bootstrap_javascript %}
+  </body>
+
+</html>
