templates main init, favicon added

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="{% static 'img/tbt_favi.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'img/tbt_favi.ico' %}" type="image/x-icon">
     {% block css %}
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
       {% bootstrap_css %}
@@ -22,7 +24,7 @@
   <body>
     <header></header>
     {% block title %}{% endblock title %}
-
+    {% block index %}{% endblock index %}
     <!-- body -->
     {% block body %}{% endblock body %}
     <footer></footer>
