--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -8,7 +8,7 @@
 
   <div class='container'>
     <div>
-      <img src="{{ user.profile_image }}" alt="profile">
+      <img src="{{ user.profile_image1 }}" alt="profile">
       <p>ID :
         {{ user.username }}</p>
       <p>닉네임 :
