사용자 디테일 및 수정하기 구현

--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -15,14 +15,19 @@
         {{ user.nickname }}</p>
       <span>
         이름 :
-        {{ user.last_name }}</span>|
+        {{ user.last_name }}
+      </span>
       <span>{{ user.first_name }}</span>
       <p>email :
         {{ user.email }}</p>
       <p>가입날짜 :
         {{ user.date_joined }}</p>
     </div>
-
+    {% if request.user.pk == user.pk %}
+      <div class='my-3'>
+        <a class='btn btn-success' href="{% url "accounts:update" %}">수정하기</a>
+      </div>
+    {% endif %}
   </div>
 
 {% endblock body %}
