--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,7 +9,7 @@
     <form action="" method="POST">
       {% csrf_token %}
       {% bootstrap_form form %}
-      <input class='btn btn-dark' type="submit" name="" id="">
+      <input class='btn btn-success' type="submit" name="" id="">
     </form>
   </div>
 {% endblock body %}
