--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -3,7 +3,7 @@
 
 {% block body %}
   <h1 class='text-center my-4'>
-    회원가입을 해주세요</h1>
+    프로필 수정 페이지</h1>
   <hr>
   <div class='container'>
     <form action="" method="POST" enctype="multipart/form-data">
