--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -1,4 +1,14 @@
 {% extends 'base.html' %}
+{% load django_bootstrap5 %}
+{% load static %}
 {% block body %}
+
   <h1>안녕</h1>
+  <a href="{% url 'products:products_create' %}">상품 작성</a>
+  {% for product in products %}
+  <div>
+  <p>{{product.name}} </p>
+  <a href="{% url 'products:products_detail' product.pk %}"><img class='rounded' style='width:19rem; height:27rem;' src="{{ product.product_image.url }}" alt="{{ product.image }}"></a>
+  {% endfor %}
+</div>
 {% endblock body %}
