--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -3,3 +3,16 @@
 * {
 	font-family: "Noto Sans KR", sans-serif;
 }
+
+:root {
+	--main: #21684f;
+	--main-sub: #318064;
+	--highlight: #c03039;
+	--high-sub: #e8525b;
+	--sub: ##122d4e;
+	--sub-b: ##19467e;
+	--bg: #f1f1f1;
+	--bg-gr: #f6f4f4;
+	--txt: ##3e3e3e;
+	--line: #959595;
+}
