사용자 비밀번호 변경 추가

--- a/accounts/templates/accounts/change_ps.html
+++ b/accounts/templates/accounts/change_ps.html
@@ -2,14 +2,13 @@
 {% load django_bootstrap5 %}
 
 {% block body %}
-  <h1 class='text-center my-4'>
-    환영합니다</h1>
+  <h1 class='text-center my-3'>비빌번호 수정하기</h1>
   <hr>
-  <div class='container'>
+  <div class='container mt-5'>
     <form action="" method="POST">
       {% csrf_token %}
       {% bootstrap_form form %}
-      <input class='btn btn-success' type="submit" name="" id="" value="로그인">
+      <input class='btn btn-success' type="submit" vlaue="저장하기">
     </form>
   </div>
 {% endblock body %}
