--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -5,7 +5,8 @@
   <h1>
     개인 프로필
   </h1>
-
+  <hr>
+  <a href="{% url "accounts:index" %}">회원 목록</a>
   <div class='container'>
     <div>
       <img src="{{ user.profile_image1 }}" alt="profile">
@@ -25,7 +26,7 @@
     </div>
     {% if request.user.pk == user.pk %}
       <div class='my-3'>
-        <a class='btn btn-success' href="{% url "accounts:update" %}">수정하기</a>
+        <a class='btn btn-success' href="{% url "accounts:update" %}">프로필 수정하기</a>
         <a class='btn btn-danger' href="{% url "accounts:delete" %}">탈퇴하기</a>
       </div>
 
