--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -9,7 +9,7 @@
     <form action="" method="POST" enctype="multipart/form-data">
       {% csrf_token %}
       {% bootstrap_form form %}
-      <input class='btn btn-success' type="submit" name="" id="">
+      <input class='btn btn-success' type="submit" name="" id="" value="가입하기">
     </form>
   </div>
 {% endblock body %}
