templates header added

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block index %}
-  <h1>main home</h1>
+  <h1>main home area</h1>
 {% endblock index %}
