--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -3,16 +3,18 @@
 
 {% block body %}
   <h1>회원 목록</h1>
-  {% for user in users %}
-    <div class="card my-3" style="width: 300px;">
-      <img class="card-img-top" src="{{ user.profile_image1 }}" style="width: 100px; height: 100px;" alt="Title">
-      <div class="card-body">
-        <h4 class="card-title">유저 이름:
-          {{ user.username }}</h4>
-        <p class="card-text">Text</p>
+  <div class="container">
+    {% for user in users %}
+      <div class="card my-3" style="width: 300px;">
+        <img class="card-img-top" src="{{ user.profile_image1 }}" style="width: 100px; height: 100px;" alt="Title">
+        <div class="card-body">
+          <h4 class="card-title">유저 이름:
+            {{ user.username }}</h4>
+          <p class="card-text">Text</p>
+        </div>
       </div>
-    </div>
-  {% endfor %}
+    {% endfor %}
+  </div>
   <h1>Navbar에 들어갈 내용들</h1>
   <div>
     {% if request.user.is_authenticated %}
