--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="{% static 'styles/init.css' %}">
   <link rel="stylesheet" href="{% static 'styles/main.css' %}">
   <link rel="stylesheet" href="{% static 'styles/main_index.css' %}">
+  <link rel="stylesheet" href="{% static 'styles/accounts_form.css' %}">
+
   {% endblock css %}
   <title>TBT</title>
   {% block script %}
