--- a/templates/base.html
+++ b/templates/base.html
@@ -16,12 +16,11 @@
   <link rel="stylesheet" href="{% static 'styles/main.css' %}">
   <link rel="stylesheet" href="{% static 'styles/main_index.css' %}">
   <link rel="stylesheet" href="{% static 'styles/accounts_form.css' %}">
-
   {% endblock css %}
   <title>TBT</title>
-  {% block script %}
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  {% endblock script %}
+  <script defer src="{% static 'script/script.js' %}"></script>
+
 </head>
 
 <body>
