--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -6,7 +6,7 @@
 	--highlight: #c03039;
 	--high-sub: #e8525b;
 	--sub: #122d4e;
-	--sub-b: ##19467e;
+	--sub-b: #19467e;
 	--bg: #f1f1f1;
 	--bg-gr: #f6f4f4;
 	--txt: ##3e3e3e;
