--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -11,7 +11,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>프로필</title>
-      <link rel="stylesheet" href="{% static 'styles/mypage-user.css' %}"/>
+      <link rel="stylesheet" href="{% static 'styles/accounts_detail.css' %}"/>
     </head>
 
     <body>
