--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -1,21 +1,45 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block body %}
-{{product.name}}
+<a href="{% url 'products:index' %}">돌아가기</a>
+<p>{{product.name}}</p>
 <img src="{{ product.product_image.url }}">
-
-{{grade|floatformat}}
+<p>{{reviews.count}}개</p>
+<p>{{grade|floatformat}}점</p>
+{% if request.user.is_authenticated %}
 <a href="{% url 'reviews:create' product.pk %}">리뷰 쓰기</a>
+{% endif %}
+<hr>
 {% for review in reviews %}
 {% if review.review_image %}
 <img src="{{ review.review_image.url }}">
 {% endif %}
-{{review.title}}
-{{review.account}}
-{{review.content}}
-{{review.grade}}
-{{review.created_at}}
+{{review.pk}}
+<p>{{review.title}}</p>
+<p>{{review.account}}</p>
+<p>{{review.content}}</p>
+<p>{{review.grade}}</p>
+<p>작성시간:{{review.created_at}}</p>
+<p>좋아요{{review.like.count}}</p>
+{% if not request.user.pk == review.account.pk %}
+{% if request.user in review.like.all %}
+<button><a href="{% url 'reviews:likes' review.pk %}">좋아요!</a></button>
+{% else %}
+<button><a href="{% url 'reviews:likes' review.pk %}">좋아요?</a></button>
+{% endif %}
+{% elif not request.user.is_authenticated %}
+<p>비로그인은 좋아요를 누를 수 없어요</p>
+{% else %}
+<P>자기자신 추천x</P>
+{% endif %}
+
+{% if not review.updated_at == review.created_at %}
+<p>수정시간:{{review.updated_at}}</p>
+{% endif %}
+{% if request.user.is_authenticated and request.user.pk == review.account.pk %}
 <a href="{% url 'reviews:delete' review.pk %}">삭제</a>
 <a href="{% url 'reviews:update' review.pk %}">수정</a>
+{% endif %}
+<hr>
 {% endfor %}
 {% endblock body %}
