--- a/accounts/templates/accounts/wishlist.html
+++ b/accounts/templates/accounts/wishlist.html
@@ -25,13 +25,21 @@
           <button class="delete__btn">삭제하기</button>
         </div>
         <!-- 찜 목록 -->
+
         <ul class="wishlist__content">
-          <li class="wishlist__box">
-            <input class="checkbox" type="checkbox" name="answer[]" id="opt-in"/>
-            <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
-            <p class="wishlist__title">아이코닉 2023 두줄 다이어리</p>
-            <p class="wishlist__price">10,880원</p>
-          </li>
+          {% if user.like_products.all %}
+            {% for product in user.like_products.all %}
+              <a href="{% url "products:products_detail" product.pk %}">
+                <li class="wishlist__box">
+                  <input class="checkbox" type="checkbox" name="answer[]" id="opt-in"/>
+                  <img class="wishlist__img" src="{{ product.product_image.url }}" alt="wishlist-img"/>
+                  <p class="wishlist__title">{{ product.name }}</p>
+                  <p class="wishlist__price">{{ product.pay }}</p>
+                </li>
+              </a>
+            {% endfor %}
+          {% endif %}
+
           <li class="wishlist__box">
             <input class="checkbox" type="checkbox" name="answer[]" id="opt-in"/>
             <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
