wishlist 디자인 수정

--- a/static/styles/wishlist.css
+++ b/static/styles/wishlist.css
@@ -1,7 +1,7 @@
 @import url(./main.css);
 
 .containers {
-  padding: 0rem 15%;
+  padding: 0 10%;
 }
 
 .title {
@@ -20,7 +20,7 @@
 
 .cart__btn {
   margin-right: 0.5rem;
-  padding: 0.3rem 0.5rem;
+  padding: 0.6rem 0.8rem;
   background-color: transparent;
   color: var(--main);
   font-weight: 600;
@@ -35,7 +35,7 @@
 }
 
 .delete__btn {
-  padding: 0.3rem 0.5rem;
+  padding: 0.6rem 0.8rem;
   background-color: transparent;
   color: var(--highlight);
   font-weight: 600;
@@ -81,7 +81,9 @@ li {
 
 .wishlist__box {
   width: 25%;
+  padding: 0 1rem;
   margin-top: 1rem;
+  margin-bottom: 1rem;
   text-align: center;
 }
 
@@ -98,6 +100,7 @@ li {
 
 /* 하위 멘트 */
 .ment {
+  white-space: nowrap;
   margin: 4rem 0;
 }
 
