--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -106,7 +106,7 @@
       <!-- 최근 리뷰 -->
       <div class="main__title">
         <p class="sub__title">최근 리뷰</p>
-        <p class="plus__title">더보기 ></p>
+        <a class="plus__title" href="{% url 'accounts:reviewlist' request.user.pk%}">더보기 ></a>
       </div>
       <section class="review">
         <div class="review__category">
