--- a/accounts/templates/accounts/review_list.html
+++ b/accounts/templates/accounts/review_list.html
@@ -26,6 +26,7 @@
             <span class="category__name">상품 이름</span><span class="category__grade">평점</span><span class="category__title">리뷰 제목</span>
           </div>
           <hr class="line"/>
+          <!-- 리뷰 아이템 -->
           <div class="review__container">
             <img class="review__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/362/B003627654.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="review-img"/>
             <span class="review__name">부모님 용돈 상장 부모님</span>
