--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -133,16 +133,17 @@
         <a class="plus__title" href="{% url 'accounts:wishlist' request.user.pk%}">더보기 ></a>
       </div>
       <div class="wishlist__content">
-        <div class="wishlist__box">
-          <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
-          <p class="wishlist__title">아이코닉 2023 두줄 다이어리</p>
-          <p class="wishlist__price">10,880원</p>
-        </div>
-        <div class="wishlist__box">
-          <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
-          <p class="wishlist__title">아이코닉 2023 두줄 다이어리</p>
-          <p class="wishlist__price">10,880원</p>
-        </div>
+        {% if user.like_products.all %}
+          {% for product in user.like_products.all %}
+            <a href="{% url "products:products_detail" product.pk %}">
+              <div class="wishlist__box">
+                <img class="wishlist__img" src="{{ product.product_image.url }}" alt="wishlist-img"/>
+                <p class="wishlist__title">{{ product.name }}</p>
+                <p class="wishlist__price">{{ product.pay }}</p>
+              </a>
+            </div>
+          {% endfor %}
+        {% endif %}
         <div class="wishlist__box">
           <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
           <p class="wishlist__title">아이코닉 2023 두줄 다이어리</p>
