--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -6,9 +6,13 @@
   <h1>안녕</h1>
   <a href="{% url 'products:products_create' %}">상품 작성</a>
   {% for product in products %}
-  <div>
-  <p>{{product.name}} </p>
-  <a href="{% url 'products:products_detail' product.pk %}"><img class='rounded' style='width:19rem; height:27rem;' src="{{ product.product_image.url }}" alt="{{ product.image }}"></a>
-  {% endfor %}
+      <div style='border:solid 1px black;'>
+        {{ product.pk }}
+        {{ product.name }}
+        {% for pdt_img in product.productimage_set.all %}
+          <img src="{{ pdt_img.image.url }}" alt="">
+        {% endfor %}
+      </div>
+    {% endfor %}
 </div>
 {% endblock body %}
