--- a/products/templates/products/products_create.html
+++ b/products/templates/products/products_create.html
@@ -4,11 +4,12 @@
 {% block body %}
 <a href="{% url 'products:index' %}">집으로</a>
 <div class="container">
-<form action="{% url 'products:products_create' %}" method="POST" enctype='multipart/form-data'>
-    {% csrf_token %}
-    {% bootstrap_form create_form %} 
-    <input type="submit" id="" value="제출">  
-</form>
-</div>
+    <form action="{% url 'products:products_create' %}" method="POST" enctype='multipart/form-data'>
+      {% csrf_token %}
+      {{ create_form.as_p }}
+      {{ product_image_form.as_p }}
+      <input type="submit" id="" value="제출">
+    </form>
+  </div>
 
 {% endblock body %}
