--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -14,7 +14,7 @@
     <p>{{products.sale}} </p>
     <img src="{{ products.product_image.url }} " alt="">
 </div>
-<p><a href="{% url 'reviews:index' products.pk %}">리뷰확인</a></p>
+<p><a href="{% url 'reviews:index' products.pk %}">리뷰확인|{{ reviews.count }}|{{ total.review_avg|floatformat }}</a></p>
 <p><a href="{% url 'products:products_update' products.pk %}">수정하기</a></p>
 <form action="{% url 'products:products_delete' products.pk  %}" method="POST">
     {% csrf_token %}
