--- a/static/styles/review_modal.css
+++ b/static/styles/review_modal.css
@@ -16,6 +16,44 @@
 .btnC:hover {
 	background: var(--main-sub);
 }
+
+.hidden {
+	display: none;
+	opacity: 0;
+}
+.modalC {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -45%);
+	max-width: 80rem;
+	background: var(--bg);
+	padding: 5rem 6rem;
+	box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+	z-index: 1000;
+	transition: all 0.5s;
+}
+.overlayC {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(4px);
+	z-index: 100;
+	transition: all 0.5s;
+}
+.scroll-block {
+	overflow: hidden;
+}
+#product-detail #rev-modal-btn,
+#product-detail .qna-modal-btn {
+	font-weight: 700;
+	font-size: 1.5rem;
+	color: var(--main);
+	cursor: pointer;
+}
 #review,
 #qna {
 	padding: 2rem;
@@ -35,7 +73,7 @@
 #qna .tit-area .btn-close {
 	font-size: 1.5rem;
 	position: absolute;
-	right: 0;
+	right: -1rem;
 	top: -1.5rem;
 	cursor: pointer;
 }
