--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="{% static 'styles/main.css' %}">
   <link rel="stylesheet" href="{% static 'styles/main_index.css' %}">
   <link rel="stylesheet" href="{% static 'styles/accounts_form.css' %}">
+  <link rel="stylesheet" href="{% static 'styles/review_modal.css' %}">
   {% endblock css %}
   <title>TBT</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
