json 파일/make_pdt_DB.py 파일 생성

--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -33,8 +33,14 @@
     </p>
     <p>{{ products.category }}
     </p>
-    <p>{{ products.Description}}
-    </p>
+    <div>
+      {% for productimage in products.productimage_set.all %}
+        <img src="{{ productimage.image.url }}" alt="" style='width:100px;'>
+      {% endfor %}
+    </div>
+    <div>
+      <img src="{{ products.Description2.url }}" alt="">
+    </div>
     <p>{{products.pay}}
     </p>
     <p>{{products.delivery}}
