--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -6,13 +6,20 @@
   <h1>안녕</h1>
   <a href="{% url 'products:products_create' %}">상품 작성</a>
   {% for product in products %}
-      <div style='border:solid 1px black;'>
-        {{ product.pk }}
-        {{ product.name }}
-        {% for pdt_img in product.productimage_set.all %}
-          <img src="{{ pdt_img.image.url }}" alt="">
-        {% endfor %}
+    <div style='border:solid 1px black;'>
+      <p>{{ product.pk }}</p>
+      <div>
+        <a href="{% url 'products:products_detail' product.pk %}">{{ product.name }}</a>
       </div>
-    {% endfor %}
+      <div>
+        <p>첫번째 이미지 사진:</p>
+        <img src="{{ product.productimage_set.all.0.image.url }}" alt="" style='width:100px;'>
+      </div>
+      <div>
+        <p>상품 상세설명 사진</p>
+        <img src="{{ product.Description2.url }}" alt="" style='height:200px;'>
+      </div>
+    </div>
+  {% endfor %}
 </div>
 {% endblock body %}
