--- a/accounts/templates/accounts/review_list.html
+++ b/accounts/templates/accounts/review_list.html
@@ -27,6 +27,22 @@
           </div>
           <hr class="line"/>
           <!-- 리뷰 아이템 -->
+          {% for review in reviews %}
+            <div class="review__container">
+              <a href="{% url 'products:products_detail' review.product.pk %}">
+                <img class="review__img" src="{{ review.product.product_image.url }}" alt="review-img"/>
+                <span class="review__name">{{ review.product.name }}</span>
+              </a>
+              <span class="review__grade">
+                <!-- 개행 방지 -->
+                <svg class="bi bi-star-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16">
+                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                </svg>
+                <!-- 개행 방지 -->
+                {{ review.grade }}</span>
+              <span class="review__title">{{ review.title }}</span>
+            </div>
+          {% endfor %}
           <div class="review__container">
             <img class="review__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/362/B003627654.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="review-img"/>
             <span class="review__name">부모님 용돈 상장 부모님</span>
