--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -125,71 +125,83 @@
         <!-- 최근 리뷰 -->
         <div class="main__title">
           <p class="sub__title">최근 리뷰</p>
-          <a class="plus__title" href="{% url 'accounts:reviewlist' request.user.pk%}">더보기 ></a>
+          <a class="plus__title" href="{% url 'accounts:review_list' request.user.pk%}">더보기 ></a>
         </div>
         <section class="review">
           <div class="review__category">
             <span class="category__name">상품 이름</span><span class="category__grade">평점</span><span class="category__title">리뷰 제목</span>
           </div>
           <hr class="line"/>
-          <div class="review__container">
-            <img class="review__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/362/B003627654.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="review-img"/>
-            <span class="review__name">부모님 용돈 상장 부모님</span>
-            <span class="review__grade">
-              <svg class="bi bi-star-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16">
-                <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-              </svg>
-              3.0</span>
-            <span class="review__title">제가 받고 싶네요 제가 받고 싶네요 제가 받고 싶네요 제가 받고 싶네요</span>
-          </div>
+          <!-- 내가쓴 리뷰 목록 -->
+          {% for review in reviews %}
+            <div class="review__container">
+              <a href="{% url 'products:products_detail' review.product.pk %}">
+                <img class="review__img" src="{{ review.product.product_image.all.first.image.url }}" alt="review-img"/>
+                <span class="review__name">{{ review.product.name }}</span>
+              </a>
+              <span class="review__grade">
+                <!-- 개행 방지 -->
+                <svg class="bi bi-star-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16">
+                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                </svg>
+                <!-- 개행 방지 -->
+                {{ review.grade }}</span>
+              <span class="review__title">{{ review.title }}</span>
+            </div>
+          {% endfor %}
+
         </section>
 
-
-      <!-- 최근 리뷰 -->
-      <div class="main__title">
-        <p class="sub__title">최근 리뷰</p>
-        <a class="plus__title" href="{% url 'accounts:review_list' request.user.pk%}">더보기 ></a>
-      </div>
-      <section class="review">
-        <div class="review__category">
-          <span class="category__name">상품 이름</span><span class="category__grade">평점</span><span class="category__title">리뷰 제목</span>
+        <!-- Wish List -->
+        <div class="main__title">
+          <p class="sub__title">Wish List</p>
+          <a class="plus__title" href="{% url 'accounts:wishlist' request.user.pk%}">더보기 ></a>
         </div>
-        <hr class="line"/>
-        <!-- 내가쓴 리뷰 목록 -->
-        {% for review in reviews %}
-          <div class="review__container">
-            <a href="{% url 'products:products_detail' review.product.pk %}">
-              <img class="review__img" src="{{ review.product.product_image.url }}" alt="review-img"/>
-              <span class="review__name">{{ review.product.name }}</span>
-            </a>
-            <span class="review__grade">
-              <!-- 개행 방지 -->
-              <svg class="bi bi-star-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16">
-                <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-              </svg>
-              <!-- 개행 방지 -->
-              {{ review.grade }}</span>
-            <span class="review__title">{{ review.title }}</span>
+        <div class="wishlist__content">
+          {% if user.like_products.all %}
+            {% for product in user.like_products.all %}
+              <a href="{% url "products:products_detail" product.pk %}">
+                <div class="wishlist__box">
+                  <img class="wishlist__img" src="{{ product.product_image.all.first.image.url }}" alt="wishlist-img"/>
+                  <p class="wishlist__title">{{ product.name }}</p>
+                  <p class="wishlist__price">{{ product.pay }}원</p>
+                </a>
+              </div>
+            {% endfor %}
+          {% endif %}
+          <div class="wishlist__box">
+            <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
+            <p class="wishlist__title">아이코닉 2023 두줄 다이어리</p>
+            <p class="wishlist__price">10,880원</p>
           </div>
-        {% endfor %}
-
+          <div class="wishlist__box">
+            <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
+            <p class="wishlist__title">아이코닉 2023 두줄 다이어리</p>
+            <p class="wishlist__price">10,880원</p>
+          </div>
+        </div>
       </section>
 
-      <script>
-        const hide = document.querySelector('.hide__order');
-        const arrowBtn = document.querySelector('.arrow__down');
-
-        arrowBtn.addEventListener('click', toggleAccordion)
-
-        function toggleAccordion(el) {
-          hide
-            .classList
-            .toggle('hidden');
-        }
-      </script>
-
+      <!-- JavaScript Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
 
   </html>
+  <script>
+    const hide = document.querySelector('.hide__order');
+    const arrowBtn = document.querySelector('.arrow__down');
+
+    arrowBtn.addEventListener('click', toggleAccordion)
+
+    function toggleAccordion(el) {
+      hide
+        .classList
+        .toggle('hidden');
+    }
+  </script>
+
+</body>
+
+</html>
 
 {% endblock body %}
