products index/detail 페이지 수정

--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -13,7 +13,7 @@
       </div>
       <div>
         <p>첫번째 이미지 사진:</p>
-        <img src="{{ product.productimage_set.all.0.image.url }}" alt="" style='width:100px;'>
+        <img src="{{ product.product_image.all.0.image.url }}" alt="" style='width:100px;'>
       </div>
       <div>
         <p>상품 상세설명 사진</p>
